--- a/templates/split.html
+++ b/templates/split.html
@@ -16,7 +16,7 @@
 
     <form enctype=multipart/form-data method="post">
         <div class="file-field input-field">
-            <div class="btn">
+            <div class="btn light-blue lighten-2">
                 <span>Fichiers</span>
                 <input type="file" multiple accept="application/pdf" name="files">
             </div>
@@ -26,7 +26,7 @@
                 </label>
             </div>
         </div>
-        <button class="btn waves-effect waves-light" type="submit" name="action">Générer PDF
+        <button class="btn waves-effect waves-light light-blue lighten-2" type="submit" name="action">Générer PDF
             <i class="material-icons right">send</i>
         </button>
     </form>
