--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,31 @@
-.titre {
-    margin-top: 50px;
-    font-size: 20px;
+.margin-top {
+    margin-top: 190px;
+}
+
+/* label color */
+.input-field label {
+    color: #4fc3f7;
+}
+/* label focus color */
+.input-field input[type=text]:focus + label {
+    color: #4fc3f7;
+}
+/* label underline focus color */
+.input-field input[type=text]:focus {
+    border-bottom: 1px solid #4fc3f7;
+    box-shadow: 0 1px 0 0 #4fc3f7;
+}
+/* valid color */
+.input-field input[type=text].valid {
+    border-bottom: 1px solid #4fc3f7;
+    box-shadow: 0 1px 0 0 #4fc3f7;
+}
+/* invalid color */
+.input-field input[type=text].invalid {
+    border-bottom: 1px solid #4fc3f7;
+    box-shadow: 0 1px 0 0 #4fc3f7;
+}
+/* icon prefix focus color */
+.input-field .prefix.active {
+    color: #4fc3f7;
 }
