Inputs pour la date et le nombre de documents attendus

--- a/templates/split.html
+++ b/templates/split.html
@@ -20,6 +20,14 @@
 </div>
 <div class="container margin-top">
     <form enctype=multipart/form-data method="post">
+        <div class="input-field col s6">
+            <input placeholder="Préfix code" id="date" name="date" type="text" class="validate">
+            <label for="date">Préfix code</label>
+        </div>
+        <div class="input-field col s6">
+            <input placeholder="Nombre de document attendu" id="nb" name="nb" type="text" class="validate">
+            <label for="nb">Nombre de document attendu</label>
+        </div>
         <div class="row  valign-wrapper">
             <div class="col s9">
                 <div class="file-field input-field">
