--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,7 @@
-.margin-top {
-    margin-top: 190px;
+.input-container {
+    margin-top: 250px;
+    padding: 50px 50px 5px 50px;
+    border-radius: 10px;
 }
 
 /* label color */
