--- a/templates/split.html
+++ b/templates/split.html
@@ -18,7 +18,7 @@
         </div>
     </nav>
 </div>
-<div class="container input-container z-depth-3 ">
+<div class="container input-container z-depth-3 margin-top" id="formulaire">
     <form enctype=multipart/form-data method="post">
         <div class="row">
             <div class="input-field col s5">
@@ -53,7 +53,7 @@
         <div class="row">
             <div class="col s5"></div>
             <div class="col s2">
-                <button class="btn waves-effect waves-light light-blue lighten-2" type="submit" name="action">
+                <button class="btn waves-effect waves-light light-blue lighten-2" type="submit" name="action" onclick="mafonction()">
                     Générer
                     PDF
                     <i class="material-icons right">send</i>
@@ -64,7 +64,30 @@
     </form>
 </div>
 
+<div class="container margin-top">
+    <div class="row">
+        <div class="col s5"></div>
+        <div class="col s2">
+            <div class="preloader-wrapper big active " id="loader" style="display: none">
+                <div class="spinner-layer spinner-blue-only">
+                    <div class="circle-clipper left">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="gap-patch">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="circle-clipper right">
+                        <div class="circle"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col s5"></div>
+    </div>
+</div>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
