--- a/templates/split.html
+++ b/templates/split.html
@@ -14,8 +14,18 @@
 <main>
     <div class="navbar-fixed">
         <nav>
-            <div class="nav-wrapper light-blue lighten-2">
-                <a href="#" class="brand-logo center">Salut Papounet</a>
+            <div class="nav-wrapper light-blue lighten-2 row">
+                <div class="col s2" ></div>
+                <div class="col s2 align-center">
+                    <i class="material-icons">ac_unit</i>
+                </div>
+                <div class="col s4 align-center title">
+                    Salut Papounet
+                </div>
+                <div class="col s2 align-center">
+                    <i class="material-icons">ac_unit</i>
+                </div>
+                <div class="col s2"></div>
             </div>
         </nav>
     </div>
