--- a/templates/split.html
+++ b/templates/split.html
@@ -15,7 +15,9 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper light-blue lighten-2 row">
-                <div class="col s2" ></div>
+                <div class="col s2 align-center">
+                    <i class="material-icons">ac_unit</i>
+                </div>
                 <div class="col s2 align-center">
                     <i class="material-icons">ac_unit</i>
                 </div>
@@ -25,7 +27,9 @@
                 <div class="col s2 align-center">
                     <i class="material-icons">ac_unit</i>
                 </div>
-                <div class="col s2"></div>
+                <div class="col s2 align-center">
+                    <i class="material-icons">ac_unit</i>
+                </div>
             </div>
         </nav>
     </div>
