--- a/templates/split.html
+++ b/templates/split.html
@@ -16,19 +16,15 @@
         <nav>
             <div class="nav-wrapper light-blue lighten-2 row">
                 <div class="col s2 align-center">
-                    <i class="material-icons">ac_unit</i>
                 </div>
                 <div class="col s2 align-center">
-                    <i class="material-icons">ac_unit</i>
                 </div>
                 <div class="col s4 align-center title">
-                    Salut Papounet
+                    Impression documents PDF Toyota
                 </div>
                 <div class="col s2 align-center">
-                    <i class="material-icons">ac_unit</i>
                 </div>
                 <div class="col s2 align-center">
-                    <i class="material-icons">ac_unit</i>
                 </div>
             </div>
         </nav>
